Widened variable setup to better accommodate translation layout issues
closes #1762

--- a/client/main/vareditor/datavarwidget.css
+++ b/client/main/vareditor/datavarwidget.css
@@ -10,7 +10,7 @@
     display: flex ;
     flex-direction: column ;
     padding-top: 3px;
-    width: 215px;
+    min-width: 215px;
 }
 
 .jmv-variable-editor-autotype {
@@ -203,7 +203,6 @@
 .missing-values {
     display: flex;
     align-items: center;
-    max-width: 200px;
 }
 
 .missing-values .label {
